reorganize and add new contributors

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -81,6 +81,11 @@
         image="https://avatars.githubusercontent.com/u/48968694"
         link="https://github.com/balplato" />
     <contributor
+        name="Benjamin Ewe"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/184654065"
+        link="https://github.com/BenjaminEwe" />
+    <contributor
         name="blaiselcq"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/70012135"
@@ -226,6 +231,11 @@
         image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/leonarrdo.png"
         link="" />
     <contributor
+        name="leywino"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/109560213"
+        link="https://github.com/leywino" />
+    <contributor
         name="Luke Wong"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/148693"
@@ -336,6 +346,11 @@
         image="https://avatars.githubusercontent.com/u/150787679"
         link="https://riars.dev/" />
     <contributor
+        name="ryeookie"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/207253145"
+        link="https://github.com/ryeookie" />
+    <contributor
         name="Safa Ali Safa"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/36265128"
@@ -355,6 +370,11 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/15253422"
         link="https://github.com/tdadvocate" />
+    <contributor
+        name="ticoeteco23gb"
+        contribution="Icons"
+        image="https://u.cubeupload.com/Net02/avatar.png"
+        link="https://net02gb.neocities.org" />
     <contributor
         name="Tmist3r"
         contribution="Icon"
@@ -410,19 +430,4 @@
         contribution="Testing"
         image=""
         link="" />
-    <contributor
-        name="Benjamin Ewe"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/184654065"
-        link="https://github.com/BenjaminEwe" />
-    <contributor
-        name="ryeookie"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/207253145"
-        link="https://github.com/ryeookie" />    
-    <contributor
-        name="leywino"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/109560213"
-        link="https://github.com/leywino" />    
 </resources>
