--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -114,6 +114,7 @@
 	<item drawable="yemeksepeti" />
 	<item drawable="yuh" />
 	<item drawable="zoom_earth" />
+	<item drawable="soundcloud" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1381,6 +1382,7 @@
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="sony_videography_alt_1" />
 	<item drawable="soop_alt_1" />
+	<item drawable="soundcloud_alt_1" />
 	<item drawable="sova_v_re_alt_1" />
 	<item drawable="sova_v_re_alt_2" />
 	<item drawable="spin_the_wheel_alt_1" />
