--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -115,6 +115,7 @@
 	<item drawable="yuh" />
 	<item drawable="zoom_earth" />
 	<item drawable="soundcloud" />
+	<item drawable="deltachat" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -278,6 +279,7 @@
 	<item drawable="delivering_hope_alt_1" />
 	<item drawable="delta_alt_1" />
 	<item drawable="delta_alt_2" />
+	<item drawable="deltachat_alt_1" />
 	<item drawable="device_id_changer_alt_1" />
 	<item drawable="device_info_hw_alt_1" />
 	<item drawable="dictionary_com_alt_1" />
