Add icons&compinfo (#1217)
* add icons, premium requests

* add icons

* add icons

* add componentinfo

* add obtainium badges to readme, closes #1208

* add componentinfo

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -114,6 +114,8 @@
 	<item drawable="yemeksepeti" />
 	<item drawable="yuh" />
 	<item drawable="zoom_earth" />
+	<item drawable="soundcloud" />
+	<item drawable="deltachat" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -277,6 +279,7 @@
 	<item drawable="delivering_hope_alt_1" />
 	<item drawable="delta_alt_1" />
 	<item drawable="delta_alt_2" />
+	<item drawable="deltachat_alt_1" />
 	<item drawable="device_id_changer_alt_1" />
 	<item drawable="device_info_hw_alt_1" />
 	<item drawable="dictionary_com_alt_1" />
@@ -1381,6 +1384,7 @@
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="sony_videography_alt_1" />
 	<item drawable="soop_alt_1" />
+	<item drawable="soundcloud_alt_1" />
 	<item drawable="sova_v_re_alt_1" />
 	<item drawable="sova_v_re_alt_2" />
 	<item drawable="spin_the_wheel_alt_1" />
