--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -146,6 +146,7 @@
 	<item drawable="yemeksepeti" />
 	<item drawable="yuh" />
 	<item drawable="zoom_earth" />
+	<item drawable="cake_wallet" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -246,6 +247,7 @@
 	<item drawable="busmap_alt_1" />
 	<item drawable="busmap_hanoi_alt_1" />
 	<item drawable="busmap_hanoi_alt_2" />
+	<item drawable="cake_wallet_alt_1" />
 	<item drawable="camera360_alt_1" />
 	<item drawable="camera_alt_1" />
 	<item drawable="camera_alt_2" />
