--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="grit" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -572,6 +573,7 @@
 	<item drawable="grammarly_alt_1" />
 	<item drawable="gramophone_alt_1" />
 	<item drawable="gramophone_alt_2" />
+	<item drawable="grit_alt_1" />
 	<item drawable="gsam_battery_monitor_alt_1" />
 	<item drawable="hahabu_alt_1" />
 	<item drawable="halma_alt_1" />
