Fix ComponentInfo for LHV
The LHV icon was not getting applied on my phone so I updated the
ComponentInfo with data from Icon Pusher.

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13347,6 +13347,7 @@
 	<item component="ComponentInfo{ee.dustland.android.minesweeper/ee.dustland.android.minesweeper.MinesweeperHostActivity}" drawable="minesweeper_the_clean_one" />
 	<item component="ComponentInfo{ee.dustland.android.solitaire/ee.dustland.android.solitaire.SolitaireHostActivity}" drawable="solitaire_the_clean_one" />
 	<item component="ComponentInfo{ee.lhv.lhv/ee.lhv.lhv.activity.login.LoginActivity}" drawable="lhv" />
+	<item component="ComponentInfo{ee.lhv.lhv/ee.lhv.lhv.activity.activitylauncher.LoginLauncher}" drawable="lhv" />
 	<item component="ComponentInfo{ee.linktr.admin/ee.linktr.admin.MainActivity}" drawable="linktree" />
 	<item component="ComponentInfo{ee.mtakso.client/ee.mtakso.client.activity.SplashHomeActivity}" drawable="bolt" />
 	<item component="ComponentInfo{ee.ria.eesti.app/ee.ria.eesti.app.MainActivity}" drawable="estonia" />
