--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -23,6 +23,8 @@
 	<item drawable="rikkahub" />
 	<item drawable="torrent_search" />
 	<item drawable="zotero" />
+	<item drawable="instant_gaming" />
+	<item drawable="premier_league" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -623,6 +625,7 @@
 	<item drawable="instacart_shopper_alt_1" />
 	<item drawable="instagram_alt_1" />
 	<item drawable="instagram_alt_2" />
+	<item drawable="instant_gaming_alt_1" />
 	<item drawable="islands_of_argenta_alt_1" />
 	<item drawable="ivy_wallet_alt_1" />
 	<item drawable="j2me_loader_alt_1" />
@@ -870,6 +873,7 @@
 	<item drawable="poste_italiane_alt_1" />
 	<item drawable="powerup_alt_1" />
 	<item drawable="ppsspp_alt_1" />
+	<item drawable="premier_league_alt_1" />
 	<item drawable="procam_x_alt_1" />
 	<item drawable="proton_mail_alt_1" />
 	<item drawable="proton_vpn_alt_1" />
