--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13848,10 +13848,10 @@
 	<item component="ComponentInfo{in.shabinder.soundbound/in.shabinder.soundbound.MainActivity}" drawable="soundbound" />
 	<item component="ComponentInfo{in.startv.hotstar.dplus/com.hotstar.MainActivity}" drawable="disney_plus" />
 	<item component="ComponentInfo{in.startv.hotstar.dplus/in.startv.hotstar.rocky.launch.splash.SplashActivity}" drawable="disney_plus" />
-	<item component="ComponentInfo{in.startv.hotstar/com.hotstar.MainActivityJv}" drawable="jio_hostar" />
-	<item component="ComponentInfo{in.startv.hotstar/com.hotstar.MainActivity}" drawable="hotstar" />
-	<item component="ComponentInfo{in.startv.hotstar/in.startv.hotstar.rocky.launch.splash.SplashActivity}" drawable="hotstar" />
-	<item component="ComponentInfo{in.startv.hotstaronly/com.hotstar.MainActivity}" drawable="hotstar" />
+	<item component="ComponentInfo{in.startv.hotstar/com.hotstar.MainActivityJv}" drawable="jio_hotstar" />
+	<item component="ComponentInfo{in.startv.hotstar/com.hotstar.MainActivity}" drawable="jio_hotstar" />
+	<item component="ComponentInfo{in.startv.hotstar/in.startv.hotstar.rocky.launch.splash.SplashActivity}" drawable="jio_hotstar" />
+	<item component="ComponentInfo{in.startv.hotstaronly/com.hotstar.MainActivity}" drawable="jio_hotstar" />
 	<item component="ComponentInfo{in.sunilpaulmathew.ashell/in.sunilpaulmathew.ashell.activities.StartActivity}" drawable="ashell" />
 	<item component="ComponentInfo{in.sunilpaulmathew.ashell/in.sunilpaulmathew.ashell.activities.aShellActivity}" drawable="ashell" />
 	<item component="ComponentInfo{in.sunilpaulmathew.izzyondroid/in.sunilpaulmathew.izzyondroid.MainActivity}" drawable="izzy_on_droid" />
