--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -631,6 +631,7 @@
 	<item drawable="j2me_loader_alt_1" />
 	<item drawable="jerboa_for_lemmy_alt_1" />
 	<item drawable="jina_drawer_alt_1" />
+	<item drawable="jio_hotstar_alt_1" />
 	<item drawable="jiojoin_alt_1" />
 	<item drawable="jiojoin_alt_2" />
 	<item drawable="joox_alt_1" />
@@ -6647,7 +6648,7 @@
 	<item drawable="jigsaw" />
 	<item drawable="jina_drawer" />
 	<item drawable="jina_sidebar" />
-	<item drawable="jio_hostar" />
+	<item drawable="jio_hotstar" />
 	<item drawable="jio_voice" />
 	<item drawable="jioaicloud" />
 	<item drawable="jiocinema" />
