--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8907,7 +8907,7 @@
 	<item component="ComponentInfo{com.rainbowtrain.eu/com.unity3d.player.UnityPlayerNativeActivity}" drawable="oo" />
 	<item component="ComponentInfo{com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity}" drawable="bbdaily" />
 	<item component="ComponentInfo{com.rainist.banksalad2/com.rainist.banksalad2.presentation.splash.SplashActivity}" drawable="banksalad" />
-	<item component="ComponentInfo{com.raival.compose.file.explorer/com.raival.compose.file.explorer.screen.main.MainActivity}" drawable="file_explorer_compose" />
+	<item component="ComponentInfo{com.raival.compose.file.explorer/com.raival.compose.file.explorer.screen.main.MainActivity}" drawable="prism_file_manager" />
 	<item component="ComponentInfo{com.raiyumi.catbird/com.raiyumi.catbird.MainActivity}" drawable="cat_bird" />
 	<item component="ComponentInfo{com.raj_arya.wallberry/com.raj_arya.wallberry.MainActivity}" drawable="wallberry" />
 	<item component="ComponentInfo{com.rajarsheechatterjee.LNReader/com.rajarsheechatterjee.LNReader.MainActivity}" drawable="lnreader" />
