--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -84,6 +84,7 @@
 	<item drawable="yandex_shedevrum" />
 	<item drawable="yeeemp" />
 	<item drawable="zotero" />
+	<item drawable="prism_file_manager" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -934,6 +935,7 @@
 	<item drawable="powerup_alt_1" />
 	<item drawable="ppsspp_alt_1" />
 	<item drawable="premier_league_alt_1" />
+	<item drawable="prism_file_manager_alt_1" />
 	<item drawable="procam_x_alt_1" />
 	<item drawable="proton_mail_alt_1" />
 	<item drawable="proton_vpn_alt_1" />
@@ -5430,7 +5432,6 @@
 	<item drawable="fiio_music" />
 	<item drawable="fildo" />
 	<item drawable="file_commander" />
-	<item drawable="file_explorer_compose" />
 	<item drawable="file_manager_plus" />
 	<item drawable="file_navigator" />
 	<item drawable="filebin" />
