--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11036,7 +11036,7 @@
 	<item component="ComponentInfo{com.telcel.contenedor/com.telcel.contenedor.gui.activities.AppsContainerActivity}" drawable="telcel" />
 	<item component="ComponentInfo{com.telefonica.movistar/com.telefonica.movistar.SplashScreen}" drawable="mi_movistar" />
 	<item component="ComponentInfo{com.telefonica.netzclub.csc/com.telefonica.netzclub.csc.activity.SplashActivity}" drawable="netzclub" />
-	<item component="ComponentInfo{com.telekom.cloudpbx/com.webex.teams.WebexLauncherActivity}" drawable="cloud_pbx" />
+	<item component="ComponentInfo{com.telekom.cloudpbx/com.webex.teams.WebexLauncherActivity}" drawable="deutsche_telekom_cloud_pbx_2_0" />
 	<item component="ComponentInfo{com.telekom.portal/com.telekom.oneapp.launcher.components.launcher.LauncherActivity}" drawable="t_mobile" />
 	<item component="ComponentInfo{com.telenordigital.contacts/com.telenordigital.contacts.controller.StartupActivity}" drawable="my_contacts" />
 	<item component="ComponentInfo{com.telepo.mobile.android.destiny/com.telepo.mobile.android.ui.MainFragmentActivity}" drawable="dstny" />
