--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4131,7 +4131,6 @@
 	<item drawable="clone_hero" />
 	<item drawable="cloud_gallery" />
 	<item drawable="cloud_mail_ru" />
-	<item drawable="cloud_pbx" />
 	<item drawable="cloud_personnel_cozy" />
 	<item drawable="cloud_service" />
 	<item drawable="cloudflare_one_agent" />
@@ -4618,6 +4617,7 @@
 	<item drawable="destiny_item_manager" />
 	<item drawable="desygner" />
 	<item drawable="detoxdroid" />
+	<item drawable="deutsche_telekom_cloud_pbx_2_0" />
 	<item drawable="deutscher_bundestag" />
 	<item drawable="deutsches_worterbuch" />
 	<item drawable="deutschlandticket_de_app" />
