--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="anker" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -37,6 +38,7 @@
 	<item drawable="amnezia_vpn_alt_1" />
 	<item drawable="amnezia_wg_alt_1" />
 	<item drawable="anghami_alt_1" />
+	<item drawable="anker_alt_1" />
 	<item drawable="annelids_alt_1" />
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
