Add icons&compinfo (#1234)
* small fixes

* add icons, premium request

* add icons

* add componentinfo

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="anker" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -37,6 +38,7 @@
 	<item drawable="amnezia_vpn_alt_1" />
 	<item drawable="amnezia_wg_alt_1" />
 	<item drawable="anghami_alt_1" />
+	<item drawable="anker_alt_1" />
 	<item drawable="annelids_alt_1" />
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
@@ -4131,7 +4133,6 @@
 	<item drawable="clone_hero" />
 	<item drawable="cloud_gallery" />
 	<item drawable="cloud_mail_ru" />
-	<item drawable="cloud_pbx" />
 	<item drawable="cloud_personnel_cozy" />
 	<item drawable="cloud_service" />
 	<item drawable="cloudflare_one_agent" />
@@ -4618,6 +4619,7 @@
 	<item drawable="destiny_item_manager" />
 	<item drawable="desygner" />
 	<item drawable="detoxdroid" />
+	<item drawable="deutsche_telekom_cloud_pbx_2_0" />
 	<item drawable="deutscher_bundestag" />
 	<item drawable="deutsches_worterbuch" />
 	<item drawable="deutschlandticket_de_app" />
