--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -13,9 +13,9 @@
 	<item drawable="dogo" />
 	<item drawable="dogorama" />
 	<item drawable="e_notariado" />
-	<item drawable="ebike_flow" />
+	<item drawable="bosch_ebike_flow" />
 	<item drawable="grievy" />
-	<item drawable="happy_puppy" />
+	<item drawable="happy_puppy_hundelieb" />
 	<item drawable="hatsune_miku_logic_paint" />
 	<item drawable="hatsune_miku_voice_alarm" />
 	<item drawable="how_to_say_goodbye" />
@@ -24,7 +24,7 @@
 	<item drawable="lassie" />
 	<item drawable="liebscher_bracht" />
 	<item drawable="life_motivational_quotes_daily" />
-	<item drawable="linexo" />
+	<item drawable="wertgarantie_linexo" />
 	<item drawable="loterias_caixa" />
 	<item drawable="lumos" />
 	<item drawable="miku_ar_camera" />
@@ -42,7 +42,7 @@
 	<item drawable="screenstream" />
 	<item drawable="simple_xray" />
 	<item drawable="speech_bubbles" />
-	<item drawable="techmanager" />
+	<item drawable="wertgarantie_techmanager" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -3632,6 +3632,7 @@
 	<item drawable="borealis" />
 	<item drawable="borno_bangla_keyboard" />
 	<item drawable="borrowell" />
+	<item drawable="bosch_ebike_flow" />
 	<item drawable="bose_music" />
 	<item drawable="boseconnect" />
 	<item drawable="bosesleep" />
@@ -5029,7 +5030,6 @@
 	<item drawable="ebay" />
 	<item drawable="ebay_kleinanzeigen" />
 	<item drawable="ebidfood" />
-	<item drawable="ebike_flow" />
 	<item drawable="ebird" />
 	<item drawable="ebookdroid" />
 	<item drawable="eboox" />
@@ -6119,7 +6119,7 @@
 	<item drawable="hapoalim_bank" />
 	<item drawable="happn" />
 	<item drawable="happy_jump" />
-	<item drawable="happy_puppy" />
+	<item drawable="happy_puppy_hundelieb" />
 	<item drawable="happy_street" />
 	<item drawable="happy_wheels" />
 	<item drawable="happycow" />
@@ -7223,7 +7223,6 @@
 	<item drawable="liner" />
 	<item drawable="lines" />
 	<item drawable="linex" />
-	<item drawable="linexo" />
 	<item drawable="lingodeer" />
 	<item drawable="lingodeer_plus" />
 	<item drawable="lingq" />
@@ -11368,7 +11367,6 @@
 	<item drawable="teamviewer" />
 	<item drawable="teapod" />
 	<item drawable="techcombank" />
-	<item drawable="techmanager" />
 	<item drawable="techmedia" />
 	<item drawable="techne" />
 	<item drawable="technisat_connect" />
@@ -12447,6 +12445,8 @@
 	<item drawable="wells_fargo" />
 	<item drawable="wemo" />
 	<item drawable="wendys" />
+	<item drawable="wertgarantie_linexo" />
+	<item drawable="wertgarantie_techmanager" />
 	<item drawable="western_union_send_money" />
 	<item drawable="westerns_movies_app" />
 	<item drawable="westpac" />
