--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2799,7 +2799,7 @@
 	<item component="ComponentInfo{com.bootiq2.gtsisic/app.futured.aliveapp.AppActivity}" drawable="alive_app" />
 	<item component="ComponentInfo{com.borderfcu.bordermobile/com.cuinterface.dpdroidcore.lib.LoginActivity}" drawable="bfcu" />
 	<item component="ComponentInfo{com.borrowell.strangelove/com.borrowell.strangelove.MainActivity}" drawable="borrowell" />
-	<item component="ComponentInfo{com.bosch.ebike.onebikeapp/com.bosch.ebike.onebikeapp.MainActivity}" drawable="ebike_flow" />
+	<item component="ComponentInfo{com.bosch.ebike.onebikeapp/com.bosch.ebike.onebikeapp.MainActivity}" drawable="bosch_ebike_flow" />
 	<item component="ComponentInfo{com.bose.bosemusic/com.bose.madrid.SplashScreenActivity}" drawable="bose_music" />
 	<item component="ComponentInfo{com.bose.corporation.bosesleep/com.bose.corporation.bosesleep.screens.search.splash.SplashActivity}" drawable="bosesleep" />
 	<item component="ComponentInfo{com.bose.monet/com.bose.monet.activity.discovery.SplashSearchingActivity}" drawable="boseconnect" />
@@ -5856,7 +5856,7 @@
 	<item component="ComponentInfo{com.humble.SlayTheSpire/android.app.NativeActivity}" drawable="slay_the_spire" />
 	<item component="ComponentInfo{com.humblebundle.forager/com.humblebundle.forager.RunnerActivity}" drawable="forager" />
 	<item component="ComponentInfo{com.humblebundle.libary/com.humblebundle.libary.DownloadListActivity}" drawable="humble_bundle" />
-	<item component="ComponentInfo{com.hundelieb.app/com.hundelieb.app.MainActivity}" drawable="happy_puppy" />
+	<item component="ComponentInfo{com.hundelieb.app/com.hundelieb.app.MainActivity}" drawable="happy_puppy_hundelieb" />
 	<item component="ComponentInfo{com.hungrybolo.remotemouseandroid/com.hungrybolo.remotemouseandroid.activity.SplashActivity}" drawable="remote_mouse" />
 	<item component="ComponentInfo{com.hunkemoller/com.hunkemoller.activities.SplashActivity}" drawable="hunkemoeller_dessous" />
 	<item component="ComponentInfo{com.hunterindustries.hydrawise/com.hunterindustries.hydrawise.SplashActivity}" drawable="hydrawise" />
@@ -13286,8 +13286,8 @@
 	<item component="ComponentInfo{de.web.mobile.android.mail/com.fsck.k9.activity.Accounts}" drawable="aosp_mail" />
 	<item component="ComponentInfo{de.web.mobile.android.mail/com.unitedinternet.portal.ui.HostActivity}" drawable="aosp_mail" />
 	<item component="ComponentInfo{de.weisheitszahn/de.weisheitszahn.SplashActivity}" drawable="weisheitszahn" />
-	<item component="ComponentInfo{de.wertgarantie.bikemanager/de.wertgarantie.bikemanager.MainActivity}" drawable="linexo" />
-	<item component="ComponentInfo{de.wertgarantie.techmanager/de.wertgarantie.techmanager.MainActivity}" drawable="techmanager" />
+	<item component="ComponentInfo{de.wertgarantie.bikemanager/de.wertgarantie.bikemanager.MainActivity}" drawable="wertgarantie_linexo" />
+	<item component="ComponentInfo{de.wertgarantie.techmanager/de.wertgarantie.techmanager.MainActivity}" drawable="wertgarantie_techmanager" />
 	<item component="ComponentInfo{de.westnordost.streetcomplete.expert/de.westnordost.streetcomplete.screens.MainActivity}" drawable="scee" />
 	<item component="ComponentInfo{de.westnordost.streetcomplete.expert/de.westnordost.streetcomplete.screens.main.MainActivity}" drawable="scee" />
 	<item component="ComponentInfo{de.westnordost.streetcomplete/de.westnordost.streetcomplete.screens.MainActivity}" drawable="streetcomplete" />
