--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -87,6 +87,7 @@
 	<item drawable="wertgarantie_linexo" />
 	<item drawable="wertgarantie_techmanager" />
 	<item drawable="wildberries_courier" />
+	<item drawable="nothing_glyphify" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -850,6 +851,7 @@
 	<item drawable="no_icon_alt_1" />
 	<item drawable="notally_alt_1" />
 	<item drawable="notesnook_alt_1" />
+	<item drawable="nothing_glyphify_alt_1" />
 	<item drawable="nothing_weather_alt_1" />
 	<item drawable="notify_for_smartwatches_alt_1" />
 	<item drawable="noto_airplane" />
