--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -17791,4 +17791,5 @@
 	<item component="ComponentInfo{com.google.android.googlequicksearchbox/com.google.android.apps.search.assistant.surfaces.onboarding.setupwizard.SetupWizardActivity}" drawable="google_assistant"/>
 	<item component="ComponentInfo{com.google.android.googlequicksearchbox/com.google.android.googlequicksearchbox.SearchActivity}" drawable="google"/>
 	<item component="ComponentInfo{com.google.android.googlequicksearchbox/com.google.android.apps.gsa.settingsui.VoiceSearchPreferences}" drawable="google"/>
+	<item component="ComponentInfo{com.eventbrite.attendee/com.eventbrite.attendee.legacy.activities.InnerMainActivity$MainActivity}" drawable="eventbrite" />
 </resources>
