icon update: Beeline

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -199,6 +199,7 @@
 	<item drawable="bbc_sounds_alt_1" />
 	<item drawable="bbc_sport_alt_1" />
 	<item drawable="bbc_weather_alt_1" />
+	<item drawable="beeline_alt_1" />
 	<item drawable="bergfex_alt_1" />
 	<item drawable="bilibili_alt_1" />
 	<item drawable="binance_alt_1" />
@@ -3446,7 +3447,6 @@
 	<item drawable="beautyxt" />
 	<item drawable="becu" />
 	<item drawable="beebom" />
-	<item drawable="beeline" />
 	<item drawable="beem_it" />
 	<item drawable="beep" />
 	<item drawable="beeper" />
