--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -36,6 +36,7 @@
 	<item drawable="valet_living_resident" />
 	<item drawable="vsp_vision_care" />
 	<item drawable="wex_benefits" />
+	<item drawable="task_manager" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1356,6 +1357,7 @@
 	<item drawable="taobao_alt_1" />
 	<item drawable="tapet_wallpapers_alt_1" />
 	<item drawable="tapet_wallpapers_alt_2" />
+	<item drawable="task_manager_alt_1" />
 	<item drawable="taskito_alt_1" />
 	<item drawable="tasks_alt_1" />
 	<item drawable="tasks_alt_amber" />
@@ -8535,7 +8537,7 @@
 	<item drawable="nextcloud_news" />
 	<item drawable="nextcloud_notes" />
 	<item drawable="nextcloud_otp_manager" />
-	<item drawable="nextcloud_passwords" />
+	<item drawable="nextcloud_nextpass_passwords" />
 	<item drawable="nextcloud_phonetrack" />
 	<item drawable="nextcloud_services" />
 	<item drawable="nextcloud_sms" />
