--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8094,7 +8094,7 @@
 	<item component="ComponentInfo{com.nextcloud.client/com.owncloud.android.ui.activity.FileDisplayActivity}" drawable="nextcloud" />
 	<item component="ComponentInfo{com.nextcloud.talk2/com.nextcloud.talk.activities.MainActivity}" drawable="nextcloud_talk" />
 	<item component="ComponentInfo{com.nextcloud_cookbook_flutter/com.nextcloud_cookbook_flutter.MainActivity}" drawable="nextcloud_cookbook" />
-	<item component="ComponentInfo{com.nextcloudpasswords/com.nextcloudpasswords.MainActivity}" drawable="nextcloud_passwords" />
+	<item component="ComponentInfo{com.nextcloudpasswords/com.nextcloudpasswords.MainActivity}" drawable="nextcloud_nextpass_passwords" />
 	<item component="ComponentInfo{com.nextcx.nays/com.isbank.nextcx.DeepLinkActivityDefault}" drawable="nays" />
 	<item component="ComponentInfo{com.nextdoor/com.nextdoor.nux.LoadAppConfigurationActivity}" drawable="nextdoor" />
 	<item component="ComponentInfo{com.nextdoor/com.nextdoor.nux.NuxActivity}" drawable="nextdoor" />
