--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -91,6 +91,8 @@
 	<item drawable="wear_installer_2" />
 	<item drawable="wex_benefits" />
 	<item drawable="world_of_hyatt" />
+	<item drawable="rikkahub" />
+	<item drawable="metrolist" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -768,6 +770,7 @@
 	<item drawable="messenger_alt_1" />
 	<item drawable="messenger_kids_alt_1" />
 	<item drawable="messenger_lite_alt_1" />
+	<item drawable="metrolist_alt_1" />
 	<item drawable="mi_argentina_alt_1" />
 	<item drawable="mi_movistar_alt_1" />
 	<item drawable="mi_security_alt_1" />
@@ -986,6 +989,7 @@
 	<item drawable="revanced_manager_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
 	<item drawable="right_gallery_alt_1" />
+	<item drawable="rikkahub_alt_1" />
 	<item drawable="rimusic_alt_1" />
 	<item drawable="rimusic_alt_2" />
 	<item drawable="robinhood_alt_1" />
