--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="torrent_search" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1419,6 +1420,7 @@
 	<item drawable="todoist_sunflower" />
 	<item drawable="todoist_tangerine" />
 	<item drawable="tooly_alt_1" />
+	<item drawable="torrent_search_alt_1" />
 	<item drawable="tower_of_fantasy_alt_1" />
 	<item drawable="traewelldroid_alt_1" />
 	<item drawable="transit_alt" />
