Added 2 Apps and Updated 2 Apps

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8552,9 +8552,9 @@
 	<item component="ComponentInfo{com.oppo.music/com.oppo.music.MainListActivity}" drawable="music" />
 	<item component="ComponentInfo{com.oppo.music/com.oppo.music.adutils.SplashActivity}" drawable="music" />
 	<item component="ComponentInfo{com.orange.eg.money/com.orange.eg.money.view.activities.SplashActivity}" drawable="orange_money" />
-	<item component="ComponentInfo{com.orange.mobinilandme/com.linkdev.mobinilandme.ui.SplashScreen}" drawable="my_orange" />
+	<item component="ComponentInfo{com.orange.mobinilandme/com.linkdev.mobinilandme.ui.SplashScreen}" drawable="my_orange_alt_1" />
+	<item component="ComponentInfo{com.orange.orangeetmoi/com.orange.care.core.ui.SplashScreenActivity}" drawable="my_orange_alt_1" />
 	<item component="ComponentInfo{com.orange.mylivebox.fr/com.orange.mylivebox.fr.gui.startup.StartupActivity}" drawable="ma_livebox" />
-	<item component="ComponentInfo{com.orange.orangeetmoi/com.orange.care.core.ui.SplashScreenActivity}" drawable="my_orange" />
 	<item component="ComponentInfo{com.orange.phone/com.orange.phone.DialtactsActivity}" drawable="orange_phone" />
 	<item component="ComponentInfo{com.orange.rn.dop/com.orange.rn.dop.MainActivity}" drawable="orange_flex" />
 	<item component="ComponentInfo{com.orange.rn.dop/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="orange_flex" />
