--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -22,7 +22,9 @@
 	<item drawable="incheon_airport" />
 	<item drawable="kwsp_i_akaun" />
 	<item drawable="mein_orthomol" />
+	<item drawable="mindful" />
 	<item drawable="mobicite" />
+	<item drawable="my_orange" />
 	<item drawable="mydigital_id" />
 	<item drawable="myjpj" />
 	<item drawable="netwall" />
@@ -740,6 +742,7 @@
 	<item drawable="mihon_alt_1" />
 	<item drawable="mihon_alt_2" />
 	<item drawable="mihon_preview_alt_1" />
+	<item drawable="mindful_alt_1" />
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
@@ -769,6 +772,7 @@
 	<item drawable="musify_alt_1" />
 	<item drawable="my_att_alt_1" />
 	<item drawable="my_fitness_pal_alt_1" />
+	<item drawable="my_orange_alt_1" />
 	<item drawable="myais_alt_1" />
 	<item drawable="myfastweb_alt_1" />
 	<item drawable="mynoise_alt_1" />
