add icon, from discord

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -41,6 +41,7 @@
 	<item drawable="torrent_search" />
 	<item drawable="ufirst_perodua_passport" />
 	<item drawable="water_drinking_water_finder" />
+	<item drawable="breakout_71" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -134,6 +135,7 @@
 	<item drawable="bouncer_alt_1" />
 	<item drawable="bpi_alt_1" />
 	<item drawable="bradesco_alt_1" />
+	<item drawable="breakout_71_alt_1" />
 	<item drawable="breezy_weather_alt_1" />
 	<item drawable="brilliant_alt_1" />
 	<item drawable="bromite_alt_1" />
